// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/UOCTET.proto";
import "./Pus142FunctionalMonitoring.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus142Model {
extensions 10 to 110;

  optional ccsds_mal.protobuf.UOCTET serviceStatus = 1;
  optional ccsds_mal.protobuf.UINTEGER noOfFunctionalMonitoring = 2;
  repeated pusGroundModel.protobuf.Pus142FunctionalMonitoring pus142FunctionalMonitoring = 3;
  optional ccsds_mal.protobuf.TIME groundDate = 4;
  optional ccsds_mal.protobuf.UINTEGER apid = 5;
  optional pusGroundModel.protobuf.PusElement pusElement = 6;
  optional ccsds_mal.protobuf.UOCTET status = 7;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeServiceStatus = 8;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeServiceStatus = 9;
}
